Updated quotes dynamic height from viewport to flex-basis to prevent overflow from container

--- a/styles.css
+++ b/styles.css
@@ -377,7 +377,7 @@ main {
 
 .quotes {
     width: 100%;
-    height: 100vh;
+    flex-basis: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
